# AutoReport

./: .gitignore  LICENSE  README.md  README_zh.md  autoreport.config.example.yaml  autoreport.config.yaml  description.md  pyproject.toml  tools_survey.md  启动AutoReport.bat
autoreport/: __init__.py  __main__.py  app.py  exceptions.py
autoreport/config/: __init__.py  manager.py  presets.py  schema.py
autoreport/core/: __init__.py  checkpoints.py  conversations.py  file_search.py  preset_sync.py  project_structure.py  recent_projects.py  skills.py  user_settings.py
autoreport/core/loops/: __init__.py  agent_loop.py  bus.py  manager.py
autoreport/core/prompts/: __init__.py  loader.py
autoreport/core/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  defaults.py  factory.py  openai_provider.py
autoreport/core/tools/: __init__.py  agent_tools.py  builtin_template_tool.py  checkpoint_tool.py  exec_tools.py  file_state.py  file_tools.py  manifest_tool.py  (+8 more)
autoreport/gui/: __init__.py  config_dialog.py  dialogs.py  icons.py  main_window.py  onboarding.py  project_dialog.py  scale.py  scintilla_utils.py  theme.py  title_bar.py
autoreport/interfaces/: __init__.py  protocol.py  types.py
autoreport/utils/: __init__.py  agent_labels.py  editor_context.py  logging_config.py
core/loops/: agent_loop.py
core/providers/: anthropic_provider.py  base.py
docs/: mineru-open-api.md
docs/report/: 123-作业报告.tex  refs.bib  report.tex
tests/: headless.py  test_agent_feedback_regression.py  test_agent_integration.py  test_agent_labels.py  test_agent_loop.py  test_agent_routing.py  test_agent_tools.py  test_app_stderr_filter.py  test_bus.py  test_checkpoint_tools.py  test_checkpoints.py  test_cli.py  test_config.py  test_context_compaction.py  test_conversations.py  test_exec_tools.py  test_file_search.py  test_file_state_integration.py  test_file_tools.py  test_gui_message_row.py  test_headless.py  test_manage_tasks.py  test_manager.py  test_manifest_tool.py  test_patch_engine.py  test_path_utils.py  test_pdf_tool.py  test_preset_sync.py  test_presets.py  test_project_structure.py  test_prompt_loader.py  test_providers.py  test_readme.py  test_report_tool.py  test_respond_tool.py  test_schema.py  test_send_to_agent.py  test_send_to_agent_tool.py  test_skill_loader.py  test_task_board.py  (+3 more)
tests/gui/: test_config_dialog.py  test_dialogs.py  test_font_stacks.py  test_main_window_system_notice.py  test_main_window_task_format.py  test_project_dialog.py  test_theme_colors.py  test_theme_scrollbar.py  test_title_bar.py
tests/interfaces/: test_api_debug_message.py
着色测试/Data/: C_Vexp.py  D_1 C-V_C-Vb_16h11m27s_1.txt  D_2 2omega R_2omega-V_t Vb = 4V_C-vt_17h29m58s_1.txt  D_2 2omega R_2omega-V_t_C-vt_17h25m17s_1.txt  D_2 C-V_C-Vb_16h14m46s_1.txt  D_2 Phi-V 1033_C-Vb_16h50m00s_1.txt  D_2 Phi-V 1233_C-Vb_16h52m57s_1.txt  D_2 Phi-V 1333_C-Vb_16h55m52s_1.txt  D_2 Phi-V 1433_C-Vb_16h58m42s_1.txt  D_2 Phi-V 1533_C-Vb_17h01m56s_1.txt  D_2 Phi-V 1633_C-Vb_17h05m03s_1.txt  D_2 Phi-V 933_C-Vb_17h08m07s_1.txt  D_2 Phi-V_C-Vb_16h36m57s_1.txt  D_3 C-V_C-Vb_16h18m04s_1.txt  D_4 C-V_C-Vb_16h21m04s_1.txt  D_5 C-V_C-Vb_16h24m01s_1.txt  Data.txt  PHI_V_EXP.py  Phi_V_fexp.py  noise_1000ms_C-time_15h50m07s_1.txt  noise_100ms_C-time_15h46m11s_1.txt  noise_10ms_C-time_15h43m25s_1.txt  noise_1ms_C-time_15h40m30s_1.txt  noise_300ms_C-time_15h47m43s_1.txt  noise_30ms_C-time_15h44m49s_1.txt  noise_3ms_C-time_15h41m53s_1.txt
着色测试/Outline/: conclusion.tex  report_outline.md  results.tex  syntax_test.md  syntax_test.tex
着色测试/References/: 教材讲义.tex
着色测试/Tex/: bibli.bib  main.aux  main.bbl  main.blg  main.out  main.tex
着色测试/Theory/: assumptions.tex  formulas.tex  theory.tex
(+154 files in other folders)
