[project]
name = "autoreport"
version = "0.1.0"
description = "基于Agent的自动化物理实验报告撰写系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "anthropic>=0.45.0,<1.0.0",
    "openai>=1.60.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "pyyaml>=6.0,<7.0.0",
    "pandas>=2.2.0,<3.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "PyQt6>=6.8.0,<7.0.0",
    "aiofiles>=24.0.0,<25.0.0",
    "typer>=0.15.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "markdown>=3.5.0,<4.0.0",
    "pyqt6-qscintilla>=2.14.1",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoreport"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest-qt>=4.5.0",
]

[project.scripts]
autoreport = "autoreport.__main__:main"
