[project]
name = "autoreport-gui"
version = "1.1"
description = "Agent-based automated physics experiment report writing system"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "xjsongphy" },
]
keywords = ["agents", "physics", "latex", "report", "pyqt6"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "anthropic>=0.45.0,<1.0.0",
    "openai>=1.60.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "pyyaml>=6.0,<7.0.0",
    "pandas>=2.2.0,<3.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "PyQt6>=6.8.0,<7.0.0",
    "aiofiles>=24.0.0,<25.0.0",
    "typer>=0.15.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "markdown>=3.5.0,<4.0.0",
    "pyqt6-qscintilla>=2.14.1",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/xjsongphy/AutoReport"
Repository = "https://github.com/xjsongphy/AutoReport"
Issues = "https://github.com/xjsongphy/AutoReport/issues"

[tool.hatch.build]
exclude = [
    "/.venv*",
    "/docs",
    "/tests",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.venv*",
    "/docs",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["autoreport"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require network access and a usable LLM provider",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest-qt>=4.5.0",
]

[project.scripts]
autoreport = "autoreport.__main__:main"
